--- a/doc/user_stories.rdoc
+++ b/doc/user_stories.rdoc
@@ -23,7 +23,7 @@
 ===  As a student, I can search through available classes by major and class number or title, so I can plan or add classes to my schedule.
 - <tt>1!</tt> As a student, I can type part of a course code or title and see the matching classes, so I can find classes that I want.
 - <tt>1!</tt> As a student, I can sign up for dummy classes, so I can quickly see how usable the interface is.
-- <tt>2</tt> As a student, each word in my search terms can independently match anywhere in the course code and title.
+- <tt>2!</tt> As a student, each word in my search terms can independently match anywhere in the course code and title.
 - <tt>2!</tt> As a student, courses that I search for appear in list form where each item can be expanded in-page to show details, so I can get information without leaving the page.
 - <tt>3</tt> As a student, I can expand all search results in one click, so I can quickly compare the details of all results.
 - <tt>4</tt> As a student, I can see preview search results immediately using a Google style auto-complete input box, so the search terms are easily discoverable.
