--- a/doc/user_stories.rdoc
+++ b/doc/user_stories.rdoc
@@ -25,7 +25,7 @@
 - <tt>1!</tt> As a student, I can sign up for dummy classes, so I can quickly see how usable the interface is.
 - <tt>2!</tt> As a student, each word in my search terms can independently match anywhere in the course code and title.
 - <tt>2!</tt> As a student, courses that I search for appear in list form where each item can be expanded in-page to show details, so I can get information without leaving the page.
-- <tt>3</tt> As a student, I can expand all search results in one click, so I can quickly compare the details of all results.
+- <tt>3!</tt> As a student, I can expand all search results in one click, so I can quickly compare the details of all results.
 - <tt>4</tt> As a student, I can see preview search results immediately using a Google style auto-complete input box, so the search terms are easily discoverable.
 - <tt>4</tt> As a student, I can filter the list to display any combination of open, waitlisted, and full classes, so I can be aware of classes that may open in the future.
 - <tt>5</tt> As a student, I can sign up for actual NCSU course offerings, so this system is more realistic.
