--- a/doc/splash.rdoc
+++ b/doc/splash.rdoc
@@ -4,3 +4,15 @@ We believe:
 * most colleges make registration too hard by developing their own or buying a registration system that is easier to make than it is to use. We put the students and professors first, and make registering with FreshTracks as easy as possible.
 * you shouldn't have to re-learn how to register for classes every semester. Using FreshTracks, it's quick and easy to find what you need to do and get it done; no arcane rituals required.
 * in simplicity. FreshTracks won't handle financial aid or tuition, housing, or updating personal information. We make registration quick, and that's it.
+
+
+FreshTracks makes it easy to find what you need to know. It knows your plan of work and shows you all the classes you need to take to fulfill the requirements for your degree. From single classes to broad elective requirements, FreshTracks lets you know all your options.
+
+Before you have to add anything your schedule, FreshTracks has an integrated wishlist that lets you plan out your schedule before your registration date. When the time comes, it makes it one click to add all the classes to your schedule. Never be surprised on your registration date again.
+
+For browsing the course catalog, FreshTracks lets you easily search for classses, and add them to your wishlist or schedule, all from the same page. Now you can finally find that perfect class to fill your last elective.
+
+FreshTracks doesn't just save students time, it saves administrators time and money.
+* The system is built on Heroku's hosting technology, which allows us to dynamically scale the available horsepower behind FreshTracks. This means you can have ten servers handling student requests during registration, two servers for the rest of the year, and a scant single server over the summer or during breaks, when the system is getting hardly any use. Never buy expensive servers that sit unused for most of the year again.
+* We recognize that every school has a different, existing system for managing courses, so we built FreshTracks to be agile and adaptable to your environment. 
+* FreshTracks isn't stopping. Once you're using it, we keep working on it, meaning that it'll keep getting better. But don't worry, we'll never lose sight of keeping the system fast, simple, and easy.
